# microagent

./: .gitignore  LICENSE  README.md  anthropic_example.py  example.py  gemini_example.py  pyproject.toml
examples/basic/: agent_handoff_anthropic.py  agent_handoff_groq.py  agent_handoff_openai.py  docs_example.py  gemini_example.py  minimum.py
examples/triage_agent/: groq_triage_example.py
microagent/: __init__.py  core.py  types.py  util.py
microagent/llm/: __init__.py  anthropic_client.py  base.py  cerebras_client.py  factory.py  gemini_client.py  groq_client.py  openai_client.py
microagent/repl/: repl.py
tests/: __init__.py  conftest.py  mock_client.py  test_core.py  test_util.py
tests/test_llm/: test_anthropic_client.py  test_gemini_client.py  test_groq_client.py  test_openai_client.py
